fixes header spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -77,7 +77,8 @@ div.modal-container {
 }
 
 
-div.modal-body {
+div.user-form-errors {
+  position: absolute;
 
 }
 
